- Fixed alignment and formatting on team_layout and inaction pages to match the rest of the learning pages.

--- a/static/css/learn.css
+++ b/static/css/learn.css
@@ -1,95 +1,96 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
-body{
-  background-color: #D3E7EE;;
+body {
+    background-color: #D3E7EE;;
 }
 
 .learn_page {
-  height:100%;
-  padding-left:20%;
+    height: 100%;
+    padding-left: 20%;
 }
 
 .learn_container {
-  width: 100%;
-  height: 100%;
-  margin:0 auto;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
 }
 
-.wrapper{
-  display: flex;
-  position: relative;
-  font-family: 'Josefin Sans', sans-serif;
-
-}
-
-.wrapper .sidebar{
-  width: 20%;
-  height: 100%;
-  background: #4b4276;
-  position: fixed;
-  left:0;
+.wrapper {
+    display: flex;
+    position: relative;
+    font-family: 'Josefin Sans', sans-serif;
 
 }
 
-.wrapper .sidebar h2{
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 30px;
+.wrapper .sidebar {
+    width: 20%;
+    height: 100%;
+    background: #4b4276;
+    position: fixed;
+    left: 0;
+
 }
 
-.wrapper .sidebar ul li{
-  padding: 15px;
-  /*border-bottom: 1px solid #bdb8d7;*/
-  border-bottom: 1px solid rgba(0,0,0,0.1);
-  border-top: 1px solid rgba(255,255,255,0.1);
+.wrapper .sidebar h2 {
+    color: #fff;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
-.wrapper .sidebar ul li a{
-  color: #e1ddea;
-  display: block;
-  text-transform: uppercase;
-  font-size: large;
+.wrapper .sidebar ul li {
+    padding: 15px;
+    /*border-bottom: 1px solid #bdb8d7;*/
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.wrapper .sidebar ul li:hover{
-  background-color: #594f8d;
+.wrapper .sidebar ul li a {
+    color: #e1ddea;
+    display: block;
+    text-transform: uppercase;
+    font-size: large;
 }
 
-.wrapper .sidebar ul li:hover a{
-  color: #fff;
+.wrapper .sidebar ul li:hover {
+    background-color: #594f8d;
+}
+
+.wrapper .sidebar ul li:hover a {
+    color: #fff;
 }
 
 
 .learn_role_container {
-  width: 100%;
+    width: 100%;
 }
 
 .learn_role_image {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-  padding: 70px 0;
+    width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    padding: 70px 0;
+    align-content: center;
+    justify-content: center;
 }
 
 .learn_role_text {
-  padding: 70px 30px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
+    padding: 70px 30px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
 }
 
 .learn_role_text_header {
-  font-size: xx-large;
-  font-weight: bold;
-
+    font-size: xx-large;
+    font-weight: bold;
 }
 
 .learn_role_text_summary {
@@ -97,24 +98,24 @@ body{
 }
 
 .learn_header {
-  text-align: center;
-  font-size: 50px;
-  color: #FF9B0E;
-  padding: 60px;
+    text-align: center;
+    font-size: 50px;
+    color: #FF9B0E;
+    padding: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .learn_button {
-    /*float: left;*/
     font-size: 25px;
     border-radius: 10px;
     padding: 10px;
-
 }
 
 .learn_button_left {
-  float: left;
+    float: left;
 }
 
 .learn_button_right {
-  float: right;
+    float: right;
 }
